--- a/task1/task1_5/task1_5.html
+++ b/task1/task1_5/task1_5.html
@@ -2,9 +2,212 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>task1_5</title>
 </head>
+<link href="task1_5.css" rel="stylesheet">
 <body>
+<div class="nav">
+    <div class="logo-img">
+        <img src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo/bd_logo1_31bdc765.png">
+    </div>
+    <ul>
+        <li><a href="#">导航链接1</a></li>
+        <li><a href="#">导航链接2</a></li>
+        <li><a href="#">导航链接3</a></li>
+        <li><a href="#">导航链接4</a></li>
+    </ul>
+</div>
 
+<div class="main">
+    <div class="wrap">
+        <div class="article">
+            <h1>文章一级标题</h1>
+            <h2>文章二级标题</h2>
+            <h6>文章作者 文章发表时间</h6>
+            <p>
+                  百度前端技术学院的课程任务是由百度前端工程师专为
+                对前端不同掌握程度的同学设计。我们尽力保证课程内
+                容的质量以及学习难<a href="#">技术学院</a>度的合理性，但即使如此，真正决
+                定课程效果的，还是你的每一次思考和实践。
+            </p>
+            <img src="img.png">
+            <p>
+                课程多数题目的解决方案都不是唯一的，这和我们在实际工作中的情况也是一致的。因此，我们的要求不仅仅是实现设计稿的效果，更是要多去思考不同的解决方案，评估不同方案的优劣，然后使用在该场景下最优雅的方式去实现。那些最终没有被我们采纳的方案，同样也可以帮助我们学到很多知识。所以，我们列出的参考资料未必是实现需求所必须的。有的时候，实现题目的要求很简单，甚至参考资料里就有，但是背后的思考和亲手去实践却是任务最关键的一部分。在学习这些资料时，要多思考，多提问，多质疑。相信通过和小伙伴们的交流，能让你的学习事半功倍。
+            </p>
+        </div>
+        <div class="article">
+            <h1>文章一级标题</h1>
+            <h2>文章二级标题</h2>
+            <h6>文章作者 文章发表时间</h6>
+            <p>
+                  百度前端<a href="#">技术学院</a> 技术学院的课程任务是由百度前端工程师专为
+                对前端不同掌握程度的同学设计。我们尽力保证课程内
+                容的质量以及学习难度的合理性，但即使如此，真正决
+                定课程效果的，还是你的每一次思考和实践。
+            </p>
+            <p>
+                课程多数题目的解决方案都不是唯一的，这和我们在实际工作中的情况也是一致的。因此，我们的要求不仅仅是实现设计稿的效果，更是要多去思考不同的解决方案，评估不同方案的优劣，然后使用在该场景下最优雅的方式去实现。那些最终没有被我们采纳的方案，同样也可以帮助我们学到很多知识。所以，我们列出的参考资料未必是实现需求所必须的。有的时候，实现题目的要求很简单，甚至参考资料里就有，但是背后的思考和亲手去实践却是任务最关键的一部分。在学习这些资料时，要多思考，多提问，多质疑。相信通过和小伙伴们的交流，能让你的学习事半功倍。
+            </p>
+            <img src="img.png">
+            <ul>
+                <li>项目列表</li>
+                <li>项目列表</li>
+                <li>项目列表</li>
+            </ul>
+
+        </div>
+        <div class="article">
+            <div class="show_img">
+                <h1> 图片 </h1>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+                <div class="img">
+                    <p>好看的图片</p>
+                    <img src="img.png">
+                </div>
+
+            </div>
+        </div>
+        <div class="article">
+            <h1>最后一篇文章一级标题</h1>
+            <h2>文章二级标题</h2>
+            <p>文章作者 文章发表时间</p>
+            <ol style="list-style-type: decimal-leading-zero">
+                <li>1.排名1</li>
+                <li>2.排名2</li>
+                <li>3.排名3</li>
+            </ol>
+            <p>下面是一个表格</p>
+            <table class="table">
+                <tr>
+                    <th>表头</th>
+                    <th>表头</th>
+                    <th>表头</th>
+                </tr>
+                <tr>
+                    <td>表内容单元格</td>
+                    <td>表内容单元格</td>
+                    <td><a href="#">操作</a></td>
+                </tr>
+                <tr>
+                    <td>表内容单元格</td>
+                    <td>表内容单元格</td>
+                    <td><a href="#">操作</a></td>
+                </tr>
+                <tr>
+                    <td>表内容单元格</td>
+                    <td>表内容单元格</td>
+                    <td><a href="#">操作</a></td>
+                </tr>
+                <tr>
+                    <td>表内容单元格</td>
+                    <td>表内容单元格</td>
+                    <td><a href="#">操作</a></td>
+                </tr>
+                <tr class="sum">
+                    <td>
+                        总计
+                    </td>
+                    <td colspan="2">1000</td>
+                </tr>
+            </table>
+        </div>
+
+    </div>
+    <div class="side">
+        <h1>这是侧边栏</h1>
+        <form class="side_form">
+            <table class="form-table">
+                <tr>
+                    <td class="right">请输入邮箱 </td>
+                    <td><input type="text" placeholder="这是文本框"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="tip"> 邮箱地址请按要求格式输入</td>
+                </tr>
+                <tr>
+                    <td class="right"> <span>请输入密码</span></td>
+                    <td> <input type="password"></td>
+                </tr>
+                <tr>
+                    <td class="right"> <span>请重复输入密码</span></td>
+                    <td> <input type="password"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="tip">密码为6-16位英文数字</td>
+                </tr>
+                <tr>
+                    <td class="right" > <span>性别</span></td>
+                    <td colspan="2">
+                        <input type="radio" value="男" name="sex" checked>男
+                        <input type="radio" value="女" name="sex">女
+                    </td>
+                </tr>
+                <tr>
+                    <td class="right"><span>城市</span></td>
+                    <td>
+                        <select name="city">
+                            <option value="杭州" aria-checked="true">杭州</option>
+                            <option value="宁波">宁波</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="right"><span>爱好</span></td>
+                    <td>
+                        <input type="checkbox"  name="hobby" value="运动" >运动
+                        <input type="checkbox" name="hobby" value="艺术" >艺术
+                        <input type="checkbox" name="hobby" value="科学" >科学
+                    </td>
+                </tr>
+                <tr>
+                    <td class="right"><span>个人描述</span></td>
+                    <td>
+                        <textarea></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">  <button style="width: 100%; background-color: #7174ff; padding: 10px;">确认提交</button></td>
+                </tr>
+            </table>
+        </form>
+    </div>
+</div>
 </body>
 </html>
